# Kalshi_Temp_Trader

./: .env.example  .gitignore  AGENTS.md  AGENT_WORKPLAN.md  CODE_GOVERNANCE.md  DATA_SOURCES.md  MASTER_CONTEXT.md  README.md  WEATHER_MODEL_SPEC.md  package-lock.json  pnpm-lock.yaml  skills-lock.json
backend/: pyproject.toml  requirements.txt
backend/config/: kalshi_market_discovery.json  manual_data_corrections.json
backend/src/: twc_nws_comparison.py  web_console.py
backend/tests/: run_comparison_tests.py  run_tests.py  test_aggregate_calibration.py  test_artifact_paths.py  test_asos_quantization.py  test_backtest_coordinator.py  test_calibration_metrics.py  test_climatology_features.py  test_climia_backfill.py  test_climia_parser.py  test_contract_bin_mapping.py  test_contract_probability_mapper.py  test_daily_prediction_loop.py  test_daily_simple_checklist.py  test_daily_status.py  test_daily_status_builder.py  test_daily_status_cli.py  test_daily_status_writers.py  test_dashboard_grouping.py  test_dashboard_output.py  test_db_models.py  test_deploy_from_mac.py  test_deployment_assets.py  test_distribution_utils.py  test_edge_engine.py  test_embedded_timestamp_selection.py  test_ev_logic.py  test_feature_flags.py  test_forecast_features.py  test_full_pipeline_readonly.py  test_generate_aggregate_report.py  test_graded_suppression.py  test_health_summary.py  test_jsonl_store.py  test_kalshi_auth.py  test_kalshi_contract_mapper.py  test_kalshi_market_mapping.py  test_kalshi_market_window.py  test_kalshi_public_client.py  test_kalshi_public_market_data.py  (+45 more)
(+426 files in other folders)
